SQLite Database connection and corresponding manipulations done for Student Interactions

--- a/Unipa.LibraryManagementSystem.Project2.csproj
+++ b/Unipa.LibraryManagementSystem.Project2.csproj
@@ -6,4 +6,7 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.0" />
+  </ItemGroup>
 </Project>
